--- a/00.Permutaciones.tex
+++ b/00.Permutaciones.tex
@@ -1,3 +1,4 @@
+\addtocounter{chapter}{-1}%
 \chapter{INTRODUCCIÓN MATEMÁTICA}
 	\section{Conjuntos y grupos}
 		Un \emph{conjunto} es una colección de objetos bien definidos y distintos entre sí que se llaman \emph{elementos}. 
