--- a/05.Serialismo.tex
+++ b/05.Serialismo.tex
@@ -3,7 +3,7 @@
 	\label{berweb}
 	Además de Schoenberg, hubo dos compositores más que contribuyeron al desarrollo del dodecafonismo y que demostraron con sus diferentes estilos la versatilidad del sistema. Éstos fueron los discípulos de Schoenberg: Alban Berg y Anton Webern. 
 	
-	El maestro y sus dos alumnos formaron la autodenominada Segunda Escuela de Viena, llamada así en honor a los miembros de la Primera Escuela de Viena: Haydn, Mozart y Beethoven. Aparte del hecho de que Schoenberg, Berg y Webern nacieron y se formaron en Viena, el nombre también simboliza su autoproclamación como herederos legítimos de la tradición musical alemana proveniente del siglo XVIII.
+	El maestro y sus dos alumnos formaron la autodenominada Segunda Escuela de Viena, llamada así en honor a los miembros de la Primera: Haydn, Mozart y Beethoven. Aparte del hecho de que Schoenberg, Berg y Webern nacieron y se formaron en Viena, el nombre también simboliza su autoproclamación como herederos legítimos de la tradición musical alemana proveniente del siglo XVIII.
 	
 	La Segunda Escuela de Viena formó parte de las vanguardias artísticas europeas, opuestas a la tendencia neoclásica de Stravinsky o Prokofiev. Los tres integrantes siguieron carreras compositivas similares en cuanto a estilo y concepción artística: una época tonal, una ruptura atonal y un desarrollo dodecafónico.
 	
@@ -23,9 +23,9 @@
 	Durante la ocupación de Viena, Webern salió de su casa una noche tras el toque de queda, y un soldado norteamericano, probablemente en estado de embriaguez, lo mató a tiros. Así, Schoenberg, el maestro y el más mayor de los tres, sobrevivió a sus dos alumnos exiliado en Estados Unidos.
     
 	\section{La escuela de Darmstadt}
-	Tras la Segunda Guerra Mundial, el mundo artístico estaba totalmente destruido. La violencia, la censura y la incomunicación habían impedido cualquier posible desarrollo creativo, y los artistas de la generación anterior se habían aislado, exiliado o habían fallecido. Volver a construir los pilares del arte era el cometido de la nueva generación de artistas, quienes compartían la sensación de que el mundo había renacido y el tiempo había comenzado de nuevo.
+	Tras la Segunda Guerra Mundial, el mundo artístico estaba totalmente destruido. La violencia, la censura y la incomunicación habían impedido cualquier posible desarrollo creativo, y los artistas de la generación anterior se habían aislado, exiliado o habían fallecido. Volver a construir los pilares del arte era el cometido de la nueva generación de artistas, quienes compartían la sensación de que el mundo había renacido tras la tragedia.
 	
-	En 1946 se fundaron los Cursos de Verano de Darmstadt, fundados por Wolfgang Steinecke y patrocinados por las fuerzas americanas, con el objetivo de retomar la actividad musical en la Alemania de la posguerra. Los cursos se centraron en dar a conocer las técnicas compositivas de las generaciones anteriores. Aunque el primer año estuvo enfocado en el movimiento neoclásico, fue en los años posteriores cuando se desarrolló un mayor interés por las técnicas serialistas.
+	En 1946 se crearon los Cursos de Verano de Darmstadt, fundados por Wolfgang Steinecke y patrocinados por las fuerzas americanas, con el objetivo de retomar la actividad musical en la Alemania de la posguerra. Se centraron en dar a conocer las técnicas compositivas de las generaciones anteriores. Aunque el primer año estuvo enfocado en el movimiento neoclásico, fue en los años posteriores cuando se desarrolló un mayor interés por las técnicas serialistas.
 	
 	Los cursos resultaron en la aparición de una nueva escuela de compositores cuya finalidad artística era crear un lenguaje musical distinto y alejado de la tradición para, de esta forma, obtener una mayor libertad compositiva. Como dijo Karlheinz Stockhausen:
 	
@@ -36,8 +36,6 @@
 	
 	Esta escuela tomó el nombre de la ciudad donde se realizaban los cursos: se llamó la Escuela de Darmstadt. El término fue acuñado por el compositor Luigi Nono en una de sus clases magistrales en 1957, y con él se describía a sí mismo y a sus compañeros compositores: Pierre Boulez, Karlheinz Stockhausen y Bruno Maderna. Para estos compositores, la tradición artística estaba demasiado relacionada con los fracasos políticos y las penurias sociales pasadas, y precisamente por ello creían necesario romper con todos los vínculos heredados.
 	
-	\pagebreak
-	
 	\begin{wrapfigure}{R}{0.3\textwidth}
 		\captionsetup{justification=centering, font=footnotesize}
 		\centering{
@@ -46,7 +44,7 @@
 	\end{wrapfigure}
     Sin embargo, para crear aquel nuevo lenguaje no tomaron como referencia el dodecafonismo de Schoenberg, ya que él veía su sistema como parte de la tradición musical, como un elemento más en la evolución de la música. Se centraron, en cambio, en la formalidad y abstracción del serialismo de Anton Webern, y desarrollaron a partir de sus métodos el denominado \emph{serialismo integral}.
     
-    Para la Escuela de Viena, el estilo compositivo de Webern era tan solo un posible enfoque del amplio abanico que abarcaba el dodecafonismo, pero la Escuela de Darmstadt lo consideró como un avance de éste.
+    Para la Escuela de Viena el estilo compositivo de Webern era tan solo un posible enfoque del amplio abanico que abarcaba el dodecafonismo, pero en Darmstadt se consideró un avance de éste.
 	
 	El serialismo integral es un sistema de composición musical que predetermina los materiales compositivos -- la melodía, la armonía, el ritmo, el timbre -- a partir de la ordenación serial de los diferentes parámetros musicales: alturas, intensidades, duraciones, ataques o instrumentos, entre otros. 
 	
