--- a/06.Acciones.tex
+++ b/06.Acciones.tex
@@ -10,7 +10,7 @@
 		\end{enumerate}
 		Como ya se ha visto en el apartado \ref{grupoD}, las funciones \{S,T,V,C\} forman el grupo diédrico $\text{D}_{n}\times\text{D}_{n}$, con $n$ la longitud de la serie. Se podrá definir entonces la acción $\phi$ de este grupo sobre el conjunto de permutaciones de orden $n$, tal que $\phi(\Psi,\ \sigma)=\Psi\circ\sigma=\Psi(\sigma)=\tau$, con $\Psi\in\text{D}_{n}\times\text{D}_{n}$ y $\sigma,\tau\in\text{S}_n$.
 		
-		De igual manera, se puede definir el grupo que forman solamente S y V, que servirá más adelante. Como son dos reflexiones, forman el conocido grupo de Klein -- a partir de ahora denotado por $\Xi$, con elementos Id, I, R e IR.
+		De igual manera, se puede definir el grupo que forman solamente I y R, que servirá más adelante. Como son dos reflexiones, forman el conocido grupo de Klein -- a partir de ahora denotado por $\Xi$, con elementos Id, I, R e IR.
 
 	\section{Órbitas y estabilizadores}	
 		Dada una acción de (G, $*$) sobre X, la \emph{órbita} de un determinado elemento $x_0\in$ X es el subconjunto de elementos $x$ de X que pueden ser alcanzados desde $x_0$ mediante algún $g_0\in$ G. Es decir, todos los $x$ para los que existe un $g_0$ que al actuar sobre $x_0$ da $x$. Trivialmente, $x_0\in Orb(x_0)$ ya que $e\cdot x_0=x_0$.
