--- a/Anexos/Matrices.tex
+++ b/Anexos/Matrices.tex
@@ -8,8 +8,8 @@
 		numberstyle=\ttfamily\tiny\color[gray]{0.3},
 		basicstyle=\small\sffamily,
 		keywordstyle=\bfseries\rmfamily,
-		identifierstyle=\color{magenta},
-		commentstyle=\it\color{green!50!blue},
+%		identifierstyle=\color{magenta},
+%		commentstyle=\it\color{green!50!blue},
 		stringstyle=\mdseries\rmfamily,
 		%
 		numbers=left,
@@ -22,4 +22,17 @@
 	}
 
 	\newpage
-	\lstinputlisting{Anexos/matriceslatex.cpp}
+	\lstinputlisting{Anexos/matrix.cpp}
+	
+		\lstset{
+%		language=Tex,
+		%
+		basicstyle=\small\sffamily,
+		keywordstyle=\small\sffamily,
+		identifierstyle=\small\sffamily,
+		commentstyle=\small\sffamily,
+		stringstyle=\small\sffamily,
+	}
+	\newpage
+	\label{app:matrices2}
+	\lstinputlisting{Anexos/matrix.tex}
